agregue animaciones a todas las paginas

--- a/Web/pages/Contacto.html
+++ b/Web/pages/Contacto.html
@@ -12,14 +12,16 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="../imagenes/LogoLargoSinFondo.png" alt="Logo Hotel Quiu" width="200" height="200">
+        <a href="../index.html">
+            <img class="logo text-flicker-in-glow" src="../imagenes/LogoLargoSinFondo.png" alt="Logo Hotel Quiu" width="200" height="200">
+        </a>
         <nav>
-            <ul class="botones">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="Hotel.html">Hotel</a></li>
-                <li><a href="Habitaciones-y-precios.html">Habitaciones y precios</a></li>
-                <li><a href="Reserva.html">Reserva</a></li>
-                <li><a href="Contacto.html">Contacto</a></li>
+            <ul class="botones text-focus-in">
+                <li class="scale-up-center"><a href="../index.html">Inicio</a></li>
+                <li class="scale-up-center"><a href="Hotel.html">Hotel</a></li>
+                <li class="scale-up-center"><a href="Habitaciones-y-precios.html">Habitaciones y precios</a></li>
+                <li class="scale-up-center"><a href="Reserva.html">Reserva</a></li>
+                <li class="scale-up-center"><a href="Contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -32,23 +34,23 @@
                 <img src="" alt="Imagenes de cordoba (decorativas)">
                 <p>No pongo las imagenes ya que no se como ponerlas para que se reproduzcan de a una.</p>
             </div>
-            <div>
+            <div class="shadow-drop-2-center">
                 <label for="nombre">Nombre:</label>
                 <input required type="text" id="nombre" name="nombre" placeholder="Ingrese su Nombre">
             </div>
-            <div>
+            <div class="shadow-drop-2-center">
                 <label for="apellido">Apellido:</label>
                 <input required type="text" id="apellido" name="apellido" placeholder="Ingrese su Apellido">
             </div>
-            <div>
+            <div class="shadow-drop-2-center">
                 <label for="telefono">Telefono:</label>
                 <input required type="number" id="telefono" name="telefono" placeholder="Ingrese su Telefono" >
             </div>
-            <div>
+            <div class="shadow-drop-2-center">
                 <label for="correo electronico">Correo Electronico:</label>
                 <input required type="text" id="correo electronico" name="correo electronico" placeholder="Ingrese su Correo Electronico">
             </div>
-            <div>
+            <div class="shadow-drop-2-center">
                 <label for="comentario">Dudas y Consultas</label>
                 <textarea name="comentario" id="comentario" cols="90" rows="8"> Ingrese aquí todas sus dudas</textarea>
             </div>
