--- a/Web/pages/Hotel.html
+++ b/Web/pages/Hotel.html
@@ -13,14 +13,16 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="../imagenes/LogoLargoSinFondo.png" alt="Logo Hotel Quiu" width="200" height="200">
+        <a href="../index.html">
+            <img class="logo text-flicker-in-glow" src="../imagenes/LogoLargoSinFondo.png" alt="Logo Hotel Quiu" width="200" height="200">
+        </a>
         <nav>
-            <ul class="botones">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="Hotel.html">Hotel</a></li>
-                <li><a href="Habitaciones-y-precios.html">Habitaciones y precios</a></li>
-                <li><a href="Reserva.html">Reserva</a></li>
-                <li><a href="Contacto.html">Contacto</a></li>
+            <ul class="botones text-focus-in">
+                <li class="scale-up-center"><a href="../index.html">Inicio</a></li>
+                <li class="scale-up-center"><a href="Hotel.html">Hotel</a></li>
+                <li class="scale-up-center"><a href="Habitaciones-y-precios.html">Habitaciones y precios</a></li>
+                <li class="scale-up-center"><a href="Reserva.html">Reserva</a></li>
+                <li class="scale-up-center"><a href="Contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
