--- a/Web/index.html
+++ b/Web/index.html
@@ -14,16 +14,16 @@
 <body>
     <header>
         <a href="index.html">
-            <img  class="logo" src="imagenes/LogoLargoSinFondo.png" alt="Logo Hotel Quiu">
+            <img  class="logo text-flicker-in-glow" src="imagenes/LogoLargoSinFondo.png" alt="Logo Hotel Quiu">
         </a>
 
         <nav>
-            <ul class="botones">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="pages/Hotel.html">Hotel</a></li>
-                <li><a href="pages/Habitaciones-y-precios.html">Habitaciones y precios</a></li>
-                <li><a href="pages/Reserva.html">Reserva</a></li>
-                <li><a href="pages/Contacto.html">Contacto</a></li>
+            <ul class="botones text-focus-in">
+                <li class="scale-up-center"><a href="index.html">Inicio</a></li>
+                <li class="scale-up-center"><a href="pages/Hotel.html">Hotel</a></li>
+                <li class="scale-up-center"><a href="pages/Habitaciones-y-precios.html">Habitaciones y precios</a></li>
+                <li class="scale-up-center"><a href="pages/Reserva.html">Reserva</a></li>
+                <li class="scale-up-center"><a href="pages/Contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -42,7 +42,7 @@
 
             <br>
 
-            <div class="principal">
+            <div class="principal text-focus-in">
                 <p>El fantastico Hotel Quiu está situado en un lugar privilegiado de Cordoba, mas especificamente en el barrio General Paz.</p> 
                 <p>Los servicios están todos incluidos en el precio al igual que nuestro exquisito desayuno, servido junto a la piscina.</p>
                 <p>En Quiu, tiene estacionamiento gratuito y vigilancia las 24 horas y todo el sistema de seguridad necesario para que se sientan seguros durante su estadía.</p>
