--- a/Web/pages/Contacto.html
+++ b/Web/pages/Contacto.html
@@ -1,73 +1,150 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
+    <script src="../js/bootstrap.bundle.min.js">
+
+    </script>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
-        <a href="../index.html">
-            <img class="logo text-flicker-in-glow" src="../imagenes/LogoLargoSinFondo.png" alt="Logo Hotel Quiu" width="200" height="200">
-        </a>
-        <nav>
-            <ul class="botones text-focus-in">
-                <li class="scale-up-center"><a href="../index.html">Inicio</a></li>
-                <li class="scale-up-center"><a href="Hotel.html">Hotel</a></li>
-                <li class="scale-up-center"><a href="Habitaciones-y-precios.html">Habitaciones y precios</a></li>
-                <li class="scale-up-center"><a href="Reserva.html">Reserva</a></li>
-                <li class="scale-up-center"><a href="Contacto.html">Contacto</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand heartbeat" href="#">
+                    <img src="../imagenes/LogoLargoSinFondo.png" alt="Logo Hotel Quiu">
+                </a>
+                <button 
+                    class="navbar-toggler" 
+                    type="button" 
+                    data-bs-toggle="collapse" 
+                    data-bs-target="#navbar" 
+                    >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbar">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link scale-up-center" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item scale-up-center">
+                            <a class="nav-link" href="./Hotel.html">Hotel</a>
+                        </li>
+                        <li class="nav-item scale-up-center">
+                            <a class="nav-link" href="./Habitaciones-y-precios.html">Habitaciones y Precios</a>
+                        </li>
+                        <li class="nav-item scale-up-center">
+                            <a class="nav-link" href="./Reserva.html">Reserva</a>
+                        </li>
+                        <li class="nav-item scale-up-center">
+                            <a class="nav-link" href="./Contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
-
     <br>
-
     <main>
-        <section class="principal">
-            <div>
-                <img src="" alt="Imagenes de cordoba (decorativas)">
-                <p>No pongo las imagenes ya que no se como ponerlas para que se reproduzcan de a una.</p>
-            </div>
-            <div class="shadow-drop-2-center">
-                <label for="nombre">Nombre:</label>
-                <input required type="text" id="nombre" name="nombre" placeholder="Ingrese su Nombre">
-            </div>
-            <div class="shadow-drop-2-center">
-                <label for="apellido">Apellido:</label>
-                <input required type="text" id="apellido" name="apellido" placeholder="Ingrese su Apellido">
-            </div>
-            <div class="shadow-drop-2-center">
-                <label for="telefono">Telefono:</label>
-                <input required type="number" id="telefono" name="telefono" placeholder="Ingrese su Telefono" >
-            </div>
-            <div class="shadow-drop-2-center">
-                <label for="correo electronico">Correo Electronico:</label>
-                <input required type="text" id="correo electronico" name="correo electronico" placeholder="Ingrese su Correo Electronico">
-            </div>
-            <div class="shadow-drop-2-center">
-                <label for="comentario">Dudas y Consultas</label>
-                <textarea name="comentario" id="comentario" cols="90" rows="8"> Ingrese aquí todas sus dudas</textarea>
-            </div>
-            <br>
-            <div>
-                <button>Enviar</button>
-            </div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2478.1589739074675!2d-64.18013608361981!3d-31.41755376870462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a29b8430ac1b%3A0xefb06247ea18e15c!2zQXYuIE1haXDDuiAyLCBYNTAwMCBJQkIsIEPDs3Jkb2Jh!5e0!3m2!1ses-419!2sar!4v1648582663832!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </section>
+        <div class="container mb-2">
+            <section class="principal">
+                <div class="row">
+                    <div class="col-12">
+                    <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+                        <!-- imagenes -->
+                        <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img
+                            src="../imagenes/imagencordoba1.jpeg"
+                            class="d-block w-100"
+                            alt="Slide 1"
+                            />
+                        </div>
+                        <div class="carousel-item">
+                            <img
+                            src="../imagenes/imagencordoba2.jpg"
+                            class="d-block w-100"
+                            alt="Slide 2"
+                            />
+                        </div>
+                        <div class="carousel-item">
+                            <img
+                            src="../imagenes/imagencordoba3.jpg"
+                            class="d-block w-100"
+                            alt="Slide 3"
+                            />
+                        </div>
+                        </div>
+            
+                        <!-- botones -->
+                        <button
+                        class="carousel-control-prev"
+                        type="button"
+                        data-bs-target="#carousel"
+                        data-bs-slide="prev"
+                        >
+                        <span
+                            class="carousel-control-prev-icon"
+                            aria-hidden="true"
+                        ></span>
+                        <span class="visually-hidden">Atrás</span>
+                        </button>
+                        <button
+                        class="carousel-control-next"
+                        type="button"
+                        data-bs-target="#carousel"
+                        data-bs-slide="next"
+                        >
+                        <span
+                            class="carousel-control-next-icon"
+                            aria-hidden="true"
+                        ></span>
+                        <span class="visually-hidden">Siguiente</span>
+                        </button>
+                    </div>
+                    </div>
+                </div>
+                    <div class="mb-3">
+                        <label for="nombre" class="form-label">Nombre</label>
+                        <input type="text" class="form-control" id="nombre" placeholder="Ingrese su Nombre">
+                    </div>
+                    <div class="mb-3">
+                        <label for="Apellido" class="form-label">Apellido</label>
+                        <input type="text" class="form-control" id="Apellido" placeholder="Ingrese su Apellido">
+                    </div>
+                    <div class="mb-3">
+                        <label for="Telefono" class="form-label">Telefono</label>
+                        <input type="number" class="form-control" id="Telefono" placeholder="Ingrese su Telefono">
+                    </div>
+                    <div class="mb-3">
+                        <label for="correo electronico" class="form-label">Correo Electronico</label>
+                        <input type="email" class="form-control" id="correo electronico" placeholder="nombreapellido@ejemplo.com">
+                    </div>
+                    <div class="mb-3">
+                        <label for="comentario" class="form-label">Dudas y Consultas</label>
+                        <textarea class="form-control" id="comentario" rows="5  "></textarea>
+                    </div>
+                    <br>
+                <div>
+                    <button>Enviar</button>
+                </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2478.1589739074675!2d-64.18013608361981!3d-31.41755376870462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a29b8430ac1b%3A0xefb06247ea18e15c!2zQXYuIE1haXDDuiAyLCBYNTAwMCBJQkIsIEPDs3Jkb2Jh!5e0!3m2!1ses-419!2sar!4v1648582663832!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </section>
+        </div>
     </main>
-
     <br>
     <br>
     <br>
     <br>
     <br>
-
     <footer>
         <div>
             <p>Quiu Cordoba</p>
@@ -80,6 +157,5 @@
             <img src="../imagenes/LogoHotelQuiu.png" alt="Logo Hotel Quiu" width="50" height="50">
         </div>
     </footer>
-
 </body>
 </html>
