--- a/Web/index.html
+++ b/Web/index.html
@@ -19,7 +19,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand heartbeat" href="#">
+                <a class="navbar-brand" href="#">
                     <img src="imagenes/LogoLargoSinFondo.png" alt="Logo Hotel Quiu">
                 </a>
                 <button 
@@ -32,19 +32,19 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item scale-up-center">
+                        <li class="nav-item">
                             <a class="nav-link" href="index.html">Inicio</a>
                         </li>
-                        <li class="nav-item scale-up-center">
+                        <li class="nav-item">
                             <a class="nav-link" href="pages/Hotel.html">Hotel</a>
                         </li>
-                        <li class="nav-item scale-up-center">
+                        <li class="nav-item">
                             <a class="nav-link" href="pages/Habitaciones-y-precios.html">Habitaciones y Precios</a>
                         </li>
-                        <li class="nav-item scale-up-center">
+                        <li class="nav-item">
                             <a class="nav-link" href="pages/Reserva.html">Reserva</a>
                         </li>
-                        <li class="nav-item scale-up-center">
+                        <li class="nav-item">
                             <a class="nav-link" href="pages/Contacto.html">Contacto</a>
                         </li>
                     </ul>
