--- a/Web/pages/Contacto.html
+++ b/Web/pages/Contacto.html
@@ -19,7 +19,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand heartbeat" href="#">
+                <a class="navbar-brand" href="#">
                     <img src="../imagenes/LogoLargoSinFondo.png" alt="Logo Hotel Quiu">
                 </a>
                 <button 
@@ -33,18 +33,18 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link scale-up-center" href="../index.html">Inicio</a>
+                            <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
-                        <li class="nav-item scale-up-center">
+                        <li class="nav-item">
                             <a class="nav-link" href="./Hotel.html">Hotel</a>
                         </li>
-                        <li class="nav-item scale-up-center">
+                        <li class="nav-item">
                             <a class="nav-link" href="./Habitaciones-y-precios.html">Habitaciones y Precios</a>
                         </li>
-                        <li class="nav-item scale-up-center">
+                        <li class="nav-item">
                             <a class="nav-link" href="./Reserva.html">Reserva</a>
                         </li>
-                        <li class="nav-item scale-up-center">
+                        <li class="nav-item">
                             <a class="nav-link" href="./Contacto.html">Contacto</a>
                         </li>
                     </ul>
@@ -54,59 +54,28 @@
     </header>
     <br>
     <main>
-        <div class="container mb-2">
+        <div class="container mb-2 lead">
             <section class="principal">
                 <div class="row">
                     <div class="col-12">
                     <div id="carousel" class="carousel slide" data-bs-ride="carousel">
-                        <!-- imagenes -->
                         <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img
-                            src="../imagenes/imagencordoba1.jpeg"
-                            class="d-block w-100"
-                            alt="Slide 1"
-                            />
+                            <img src="../imagenes/imagencordoba1.jpeg" class="d-block w-100" alt="Slide 1"/>
                         </div>
                         <div class="carousel-item">
-                            <img
-                            src="../imagenes/imagencordoba2.jpg"
-                            class="d-block w-100"
-                            alt="Slide 2"
-                            />
+                            <img src="../imagenes/imagencordoba2.jpg" class="d-block w-100" alt="Slide 2"/>
                         </div>
                         <div class="carousel-item">
-                            <img
-                            src="../imagenes/imagencordoba3.jpg"
-                            class="d-block w-100"
-                            alt="Slide 3"
-                            />
+                            <img src="../imagenes/imagencordoba3.jpg" class="d-block w-100" alt="Slide 3"/>
                         </div>
                         </div>
-            
-                        <!-- botones -->
-                        <button
-                        class="carousel-control-prev"
-                        type="button"
-                        data-bs-target="#carousel"
-                        data-bs-slide="prev"
-                        >
-                        <span
-                            class="carousel-control-prev-icon"
-                            aria-hidden="true"
-                        ></span>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev" >
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Atrás</span>
                         </button>
-                        <button
-                        class="carousel-control-next"
-                        type="button"
-                        data-bs-target="#carousel"
-                        data-bs-slide="next"
-                        >
-                        <span
-                            class="carousel-control-next-icon"
-                            aria-hidden="true"
-                        ></span>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next" >
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Siguiente</span>
                         </button>
                     </div>
@@ -146,7 +115,7 @@
     <br>
     <br>
     <footer>
-        <div>
+        <div class="lead">
             <p>Quiu Cordoba</p>
             <p>Avenida Cosito 1234</p>
             <p>Tel: +54 351 123 - 4560</p>
