--- a/Web/pages/Hotel.html
+++ b/Web/pages/Hotel.html
@@ -19,7 +19,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand heartbeat" href="#">
+                <a class="navbar-brand" href="#">
                     <img src="../imagenes/LogoLargoSinFondo.png" alt="Logo Hotel Quiu">
                 </a>
                 <button 
@@ -32,19 +32,19 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item scale-up-center">
+                        <li class="nav-item">
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
-                        <li class="nav-item scale-up-center">
+                        <li class="nav-item">
                             <a class="nav-link" href="./Hotel.html">Hotel</a>
                         </li>
-                        <li class="nav-item scale-up-center">
+                        <li class="nav-item">
                             <a class="nav-link" href="./Habitaciones-y-precios.html">Habitaciones y Precios</a>
                         </li>
-                        <li class="nav-item scale-up-center">
+                        <li class="nav-item">
                             <a class="nav-link" href="./Reserva.html">Reserva</a>
                         </li>
-                        <li class="nav-item scale-up-center">
+                        <li class="nav-item">
                             <a class="nav-link" href="./Contacto.html">Contacto</a>
                         </li>
                     </ul>
@@ -56,15 +56,11 @@
     <main>
         <section>
             <div>
-                <img class="habitacion" src="../imagenes/habitacion-hotel.jpg" alt="Imagenes de las habitaciones">
+                <img class="habitacion" src="../imagenes/platinum1.jpg" alt="Imagenes de las habitaciones">
             </div>
             <br>
             <br>
-            
-            <div class="principal">
-                <p> ★ ★ ★ </p>
-                <p>Nombre de cada habitacion mas sus respectivas commodities</p>
-            </div>
+
         </section>
     </main>
     <br>
@@ -73,7 +69,7 @@
     <br>
     <br>
     <footer>
-        <div>
+        <div class="lead">
             <p>Quiu Cordoba</p>
             <p>Avenida Cosito 1234</p>
             <p>Tel: +54 351 123 - 4560</p>
