--- a/Web/pages/Reserva.html
+++ b/Web/pages/Reserva.html
@@ -16,70 +16,231 @@
     
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand heartbeat" href="#">
-                    <img src="../imagenes/LogoLargoSinFondo.png" alt="Logo Hotel Quiu">
-                </a>
-                <button 
-                    class="navbar-toggler" 
-                    type="button" 
-                    data-bs-toggle="collapse" 
-                    data-bs-target="#navbar" 
-                    >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbar">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link scale-up-center" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="./Hotel.html">Hotel</a>
-                        </li>
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link scale-up-center" href="./Habitaciones-y-precios.html">Habitaciones y Precios</a>
-                        </li>
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="./Reserva.html">Reserva</a>
-                        </li>
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="./Contacto.html">Contacto</a>
-                        </li>
-                    </ul>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">
+                        <img src="../imagenes/LogoLargoSinFondo.png" alt="Logo Hotel Quiu">
+                    </a>
+                    <button 
+                        class="navbar-toggler" 
+                        type="button" 
+                        data-bs-toggle="collapse" 
+                        data-bs-target="#navbar" 
+                        >
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbar">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="../index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./Hotel.html">Hotel</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./Habitaciones-y-precios.html">Habitaciones y Precios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./Reserva.html">Reserva</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./Contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
+            </nav>
+        </header>
+        <br>
+    <div class="container">
+        <main class="row mt-5">
+            <section class="col col-lg-10">
+              <h1 class="display-1 mb-5">Precios y Disponibilidad</h1>
+              <div class="row g-5">
+                <div class="col-12 col-md-4">
+                  <article class="card effect">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="../imagenes/Gold1.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="../imagenes/gold2.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="../imagenes/gold3.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                            </div>
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
+                    <div class="card-body">
+                      <h4 class="card-title">Habitacion Gold</h4>
+                      <p class="card-text">
+                        <label for="start">Fecha inicio:</label>
+
+                        <input type="date" id="start" name="trip-start"
+                               value="2018-07-22"
+                               min="2022-01-01" max="2025-12-31">
+                        <br>
+                        <label for="start">Fecha fin:</label>
+
+                        <input type="date" id="start" name="trip-start"
+                               value="2018-07-22"
+                               min="2022-01-01" max="2025-12-31">
+                      </p>
+                      <a class="btn btn-primary" href="">Reservar</a>
+                    </div>
+                  </article>
+                </div>
+
+                <div class="col-12 col-md-4">
+                  <article class="card effect">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="../imagenes/platinum1.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="../imagenes/platinum2.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="../imagenes/platinum3.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                            </div>
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
+                    <div class="card-body">
+                      <h4 class="card-title">Habitacion Platinum</h4>
+                      <p class="card-text">
+                        <label for="start">Fecha inicio:</label>
+
+                        <input type="date" id="start" name="trip-start"
+                               value="2018-07-22"
+                               min="2022-01-01" max="2025-12-31">
+                        <br>
+                        <label for="start">Fecha fin:</label>
+
+                        <input type="date" id="start" name="trip-start"
+                               value="2018-07-22"
+                               min="2022-01-01" max="2025-12-31">
+                      </p>
+                      <a class="btn btn-primary" href="">Reservar</a>
+                    </div>
+                  </article>
+                </div>
+
+                <div class="col-12 col-md-4">
+                  <article class="card effect">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="../imagenes/diamond1.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="../imagenes/diamond2.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="../imagenes/diamond3.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                            </div>
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
+                    <div class="card-body">
+                      <h4 class="card-title">Habitacion Diamond</h4>
+                      <p class="card-text">
+                        <label for="start">Fecha inicio:</label>
+
+                        <input type="date" id="start" name="trip-start"
+                               value="2018-07-22"
+                               min="2022-01-01" max="2025-12-31">
+                        <br>
+                        <label for="start">Fecha fin:</label>
+
+                        <input type="date" id="start" name="trip-start"
+                               value="2018-07-22"
+                               min="2022-01-01" max="2025-12-31">
+                      </p>
+                      <a class="btn btn-primary" href="">Reservar</a>
+                    </div>
+                  </article>
+                </div>
+              </div>
+            </section>
+        </main>
+
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <footer>
+            <div>
+                <p>Quiu Cordoba</p>
+                <p>Avenida Cosito 1234</p>
+                <p>Tel: +54 351 123 - 4560</p>
+                <p>@: hotelquiucordoba@quiuhotels.com</p>
+                <span>© Hotel Riu  2022</span>
             </div>
-        </nav>
-    </header>
-
-    <br>
-
-    <main>
-        <section class="principal">
-            <p>Zona en la cual Habitaciones y Precios te redirecciona para efectuar finalmente la reserva, contiene la informacion de medios de pagos y seccion para abonar</p>
-        </section>
-    </main>
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-
-    <footer>
-        <div>
-            <p>Quiu Cordoba</p>
-            <p>Avenida Cosito 1234</p>
-            <p>Tel: +54 351 123 - 4560</p>
-            <p>@: hotelquiucordoba@quiuhotels.com</p>
-            <span>© Hotel Riu  2022</span>
-        </div>
-        <div class="grid__hijo1">
-            <img src="../imagenes/LogoHotelQuiu.png" alt="Logo Hotel Quiu" width="50" height="50">
-        </div>
-    </footer>
-
+            <div class="grid__hijo1">
+                <img src="../imagenes/LogoHotelQuiu.png" alt="Logo Hotel Quiu" width="50" height="50">
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
